--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     }
   ],
   "require": {
-    "mustangostang/spyc": "0.6.*"
+    "mustangostang/spyc": "0.6.*",
+    "guzzlehttp/guzzle": "^6.3"
   },
   "require-dev": {
     "phpunit/phpunit": "4.0.*"
