Changes author's homepage in composer.json

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     {
       "name": "Rutger Kirkels",
       "email": "rutger@kirkels.nl",
-      "homepage": "http://rutger.kirkels.nl"
+      "homepage": "https://rutger.kirkels.nl"
     }
   ],
   "require": {
